package NYdbKV;

message TKeyValue {
    required string Key = 1;
    optional string Value = 2;
};
