syntax = "proto3";

package NAlice.NScenarios;

option go_package = "a.yandex-team.ru/alice/megamind/protos/scenarios";
option java_package = "ru.yandex.alice.megamind.protos.scenarios";
option java_outer_classname = "UserInfo";

import "alice/megamind/protos/property/property.proto";

import "mapreduce/yt/interface/protos/extension.proto";

message TUserInfo {
    option (NYT.default_field_flags) = SERIALIZATION_YT;

    repeated TProperty Properties = 1 [json_name = "properties", (NYT.column_name) = "properties"];
}
